Courses small fixes (#27)
