# swagger/swagger.json
@@ -19,6 +19,36 @@
     "basePath": "/api/v1",
     "paths": {
         "/courses": {
+            "get": {
+                "description": "List a new courses",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "courses"
+                ],
+                "summary": "List courses",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/endpoints.ListCoursesResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {}
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
+                    }
+                }
+            },
             "post": {
                 "description": "Create a new course",
                 "consumes": [
@@ -28,7 +58,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "course"
+                    "courses"
                 ],
                 "summary": "Create course",
                 "parameters": [
@@ -38,7 +68,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/endpoints.createCourseRequest"
+                            "$ref": "#/definitions/endpoints.CreateCourseRequest"
                         }
                     }
                 ],
@@ -46,7 +76,141 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/endpoints.createCourseResponse"
+                            "$ref": "#/definitions/endpoints.CreateCourseResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {}
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
+                    }
+                }
+            }
+        },
+        "/courses/{uuid}": {
+            "get": {
+                "description": "Find a new course",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "courses"
+                ],
+                "summary": "Find course",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "format": "uuid",
+                        "description": "Course UUID",
+                        "name": "uuid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/endpoints.FindCourseResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {}
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
+                    }
+                }
+            },
+            "put": {
+                "description": "Update a course",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "courses"
+                ],
+                "summary": "Update course",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "format": "uuid",
+                        "description": "Course UUID",
+                        "name": "uuid",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Update Course",
+                        "name": "course",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/endpoints.UpdateCourseRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/endpoints.UpdateCourseResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {}
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete a new course",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "courses"
+                ],
+                "summary": "Delete course",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "format": "uuid",
+                        "description": "Course UUID",
+                        "name": "uuid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/endpoints.DeleteCourseResponse"
                         }
                     },
                     "400": {
@@ -66,7 +230,42 @@
         }
     },
     "definitions": {
-        "endpoints.createCourseRequest": {
+        "endpoints.CourseResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "excerpt": {
+                    "type": "string"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "image_cover": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "underline": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "uuid": {
+                    "type": "string"
+                }
+            }
+        },
+        "endpoints.CreateCourseRequest": {
             "type": "object",
             "required": [
                 "code",
@@ -104,20 +303,74 @@
                 }
             }
         },
-        "endpoints.createCourseResponse": {
+        "endpoints.CreateCourseResponse": {
             "type": "object",
             "properties": {
-                "code": {
+                "course": {
+                    "$ref": "#/definitions/endpoints.CourseResponse"
+                }
+            }
+        },
+        "endpoints.DeleteCourseResponse": {
+            "type": "object",
+            "properties": {
+                "course": {
+                    "$ref": "#/definitions/endpoints.DeletedCourseResponse"
+                }
+            }
+        },
+        "endpoints.DeletedCourseResponse": {
+            "type": "object",
+            "properties": {
+                "deleted_at": {
                     "type": "string"
                 },
-                "created_at": {
+                "uuid": {
                     "type": "string"
+                }
+            }
+        },
+        "endpoints.FindCourseResponse": {
+            "type": "object",
+            "properties": {
+                "course": {
+                    "$ref": "#/definitions/endpoints.CourseResponse"
+                }
+            }
+        },
+        "endpoints.ListCoursesResponse": {
+            "type": "object",
+            "properties": {
+                "courses": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/endpoints.CourseResponse"
+                    }
+                }
+            }
+        },
+        "endpoints.UpdateCourseRequest": {
+            "type": "object",
+            "required": [
+                "code",
+                "description",
+                "excerpt",
+                "name",
+                "underline",
+                "uuid"
+            ],
+            "properties": {
+                "code": {
+                    "type": "string",
+                    "maxLength": 100
                 },
                 "description": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 255
                 },
                 "excerpt": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 140
                 },
                 "image": {
                     "type": "string"
@@ -126,16 +379,23 @@
                     "type": "string"
                 },
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 100
                 },
                 "underline": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 100
                 },
                 "uuid": {
                     "type": "string"
+                }
+            }
+        },
+        "endpoints.UpdateCourseResponse": {
+            "type": "object",
+            "properties": {
+                "course": {
+                    "$ref": "#/definitions/endpoints.CourseResponse"
                 }
             }
         }
@@ -156,7 +416,7 @@
             "authorizationUrl": "https://sso.sumelms.com/oauth/authorize",
             "tokenUrl": "https://sso.sumelms.com/oauth/token",
             "scopes": {
-                "admin": "                            Grants read and write access to administrative information"
+                "admin": "Grants read and write access to administrative information"
             }
         },
         "OAuth2Application": {
@@ -164,8 +424,8 @@
             "flow": "application",
             "tokenUrl": "https://sso.sumelms.com/oauth/token",
             "scopes": {
-                "admin": "                             Grants read and write access to administrative information",
-                "write": "                             Grants write access"
+                "admin": "Grants read and write access to administrative information",
+                "write": "Grants write access"
             }
         },
         "OAuth2Implicit": {
@@ -173,8 +433,8 @@
             "flow": "implicit",
             "authorizationUrl": "https://sso.sumelms.com/oauth/authorize",
             "scopes": {
-                "admin": "                          Grants read and write access to administrative information",
-                "write": "                          Grants write access"
+                "admin": "Grants read and write access to administrative information",
+                "write": "Grants write access"
             }
         },
         "OAuth2Password": {
@@ -182,9 +442,9 @@
             "flow": "password",
             "tokenUrl": "https://sso.sumelms.com/oauth/token",
             "scopes": {
-                "admin": "                          Grants read and write access to administrative information",
-                "read": "                           Grants read access",
-                "write": "                          Grants write access"
+                "admin": "Grants read and write access to administrative information",
+                "read": "Grants read access",
+                "write": "Grants write access"
             }
         }
     }
